--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,21 @@
 /*  your css code here. If applicable */
+#animal-photos{
+	display:flex;
+	flex-direction:column;
+	align-items:center;
+	justify-content:center;
+	flex-wrap:wrap;
+	background-color:grey;
+}
+h2{
+	text-transform:uppercase;
+	color:white;
+}
+.images{
+	flex:0 0 auto;
+	padding:5px;
+	margin:2px;
+	width:200px;
+	height:100px;
+	border-radius:10px;
+}
